add user profile page and link to and from

--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
         Find someone to talk to
     </button>
 
+    <button onclick="window.location.href = 'user.html';">
+        Profile Page
+    </button>
+
   </body>
 </html>
