tried addingshow/hide id functionality

--- a/user.html
+++ b/user.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>WPI Hackathon 2021 Project | Profile</title>
-    <script src="index.js"></script>
+    <script src="user.js"></script>
     <!-- <link rel="stylesheet" href="styles.css"> -->
   </head>
   <body> 
 
     <h1>John Doe's Profile</h1>
-
+    <!--what could be an appropriate event?-->
+    <!--call function idShow() on above mentioned event-->
+    <div id = 'id' onmouseover="idShow()">id:</div>
     <p>
         Discord: johndoe#12345
     </p>
